2008-11-21 01:12-EST Gregory John Casamento <greg_casamento@yahoo.com>

	* Source/GSNibTemplates.m: Remove calls to designated initializers
	as per documentation.

2008-11-20  Wolfgang Lux  <wolfgang.lux@gmail.com>

	* Source/NSWindow.m (-miniaturize:): Revert the previous change
	correcting bug #24707. A better fix for this is now in -back.

2008-11-19 Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSCachedImageRep.m(-draw): Add hack to draw on a scaled
	context. 

2008-11-17 Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSBezierPath.m: (-windingCountAtPoint:) Return 0 when the
	path is empty.

2008-11-17 Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSApplication.m (-finishLaunching): Split up final
	notification sending into method _didFinishLaunching to allow
	supclasses to go between these calls.

2008-11-17 Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSImage.m (-bestRepresentationForDevice:): Get the device
	desription from the window.

2008-11-16 Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSView.m (-setBounds:, -setBoundsSize:): Fixed bug in
	last change not getting the _boundsMatrix correct.

2008-11-15  Wolfgang Lux  <wolfgang.lux@gmail.com>

	* Source/NSSavePanel.m (-_setupForDirectory:file:): Abort editing
	for the file name's text cell before setting the passed in file
	name.

	* Source/NSDocument.m (-runModalSavePanel:withAccessoryView:):
	When the document has been saved already pass its file name to the
	save panel like on Mac OS X.

	* Source/NSControl.m (-drawRect): Make sure the cell's control
	view is always set up.

2008-11-14 Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSScrollView.m (-setContentView:): Replaced last change
	with one inside of setContentView:.
	* Source/NSView.m (-setFrame:): One more adjustment for bounds
	transformation. 

2008-11-14 00:40-EST Gregory John Casamento <greg_casamento@yahoo.com>

	* Source/NSScrollView.m: Correct issue with tableviews when
	loading nib files, corrected bug #24782.

2008-11-13 Fred Kiefer <FredKiefer@gmx.de>